Configuracioón de colores para la app y pantalla base para el registro

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,22 +84,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¿Olvidó la contraseña?"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/holo_red_dark"
+        android:layout_marginTop="48dp"
         app:layout_constraintStart_toStartOf="@+id/login_with_google"
         app:layout_constraintEnd_toEndOf="@+id/login_with_google"
         app:layout_constraintTop_toBottomOf="@+id/login_with_google" />
 
     <TextView
-        android:id="@+id/create_account_text"
+        android:id="@+id/createAccountText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¿No tiene una cuenta? Cree una"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginTop="20dp"
+        android:textColor="@color/blue_1"
+        android:layout_marginTop="48dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
         app:layout_constraintStart_toStartOf="@+id/forgot_password_text"
         app:layout_constraintEnd_toEndOf="@+id/forgot_password_text"
         app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />
+
 
     <ProgressBar
         android:id="@+id/loading"
@@ -107,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/create_account_text"
+        app:layout_constraintTop_toBottomOf="@+id/createAccountText"
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password" />
 
