--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,19 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
-
+        android:padding="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/registerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/tvRegisterTitle"
                 android:layout_width="wrap_content"
@@ -24,18 +28,28 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="16dp"/>
+
+            <!-- Botón de Sign-In con Google -->
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="132dp"
+                android:layout_height="44dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle" />
+
             <!-- Nombre -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/nameLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/sign_in_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="60dp"
-                android:hint="@string/name">
-
-
+                android:layout_marginTop="16dp"
+                android:hint="@string/userName">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/nameEditText"
@@ -53,28 +67,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="16dp"
-                android:hint="@string/last_name_1">
+                android:hint="@string/last_names">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/lastName1EditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Apellido 2 -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/lastName2Layout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/lastName1Layout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="16dp"
-                android:hint="@string/last_name_2">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/lastName2EditText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"/>
@@ -85,7 +81,7 @@
                 android:id="@+id/birthdateLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/lastName2Layout"
+                app:layout_constraintTop_toBottomOf="@id/lastName1Layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="16dp"
@@ -100,23 +96,36 @@
                     android:background="@color/white"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Foto de Perfil -->
-            <ImageView
-                android:id="@+id/profileImageView"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="28dp"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/profileImageInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint=" "
+                app:placeholderText="Seleccione su foto de perfil (opcional):"
                 app:layout_constraintTop_toBottomOf="@id/birthdateLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:src="@drawable/ic_launcher_background"/> <!-- Cambia este drawable por tu placeholder -->
+                android:layout_marginTop="24dp"
+                app:boxBackgroundMode="outline"
+                app:boxStrokeColor="@color/blue_1"
+                app:boxStrokeWidth="2dp"
+                app:endIconMode="custom">
+
+            <ImageView
+                android:id="@+id/profileImageView"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/add_photo" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Correo Electrónico -->
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/emailLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/profileImageView"
+                app:layout_constraintTop_toBottomOf="@id/profileImageInputLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="28dp"
@@ -128,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
                     android:background="@color/white"
-                   />
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Contraseña -->
