--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -161,14 +161,32 @@
                     android:layout_marginTop="16dp"
                     android:background="@color/white"/>
             </com.google.android.material.textfield.TextInputLayout>
+            <!-- Confirmación de Contraseña -->
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/confirmPasswordLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="12dp"
+                android:hint="@string/confirm_password"
+                app:passwordToggleEnabled="true">
 
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/confirmPasswordEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:background="@color/white"/>
+            </com.google.android.material.textfield.TextInputLayout>
             <!-- Botón de Registro -->
             <Button
                 android:id="@+id/registerButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="@string/register"
-                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
+                app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="36dp"
